# avm

./: .appveyor.yml  .codeclimate.yml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  api.html  bytecode.html  genindex.html  index.html  makefile  memory.html  requirements.txt  runtime.html  search.html  searchindex.js  utest.sh  utilities.html
_sources/: bytecode.rst.txt  memory.rst.txt
cmake/: CMakeLists.txt  ParseAndAddCatchTests.cmake
docs/: Doxyfile  api.rst  bytecode.rst  conf.py  index.rst  memory.rst  runtime.rst  utilities.rst
qcheck/: cffi_helpers.py
scripts/: any.lua  genie.lua  toolchain.lua  utest.lua
src/: CMakeLists.txt  config.h.in
src/inc/any/: actor.h  asm.h  db.h  dispatcher.h  errno.h  fiber.h  gc.h  gc_buffer.h  gc_string.h  list.h  loader.h  platform.h  process.h  prototype.h  rt_types.h  scheduler.h  stack.h  std.h  std_array.h  std_buffer.h  std_buffer_bits.h  std_io.h  std_libs.h  std_string.h  std_table.h  std_tuple.h  string_table.h  task.h  task_fiber.h  task_gccasm.h  timer.h  tool_types.h  types.h  val_string.h  version.h  vm.h  wby.h
src/inc/avm/: alloc.h  errno.h  prereq.h
src/private/: CMakeLists.txt  actor.c  alloc.c  asm.c  asm.h  chunk.h  config.h.in  db.c  dispatcher.c  dlist.h  gc.c  gc_string.c  loader.c  opcode.h  process.c  scheduler.c  stack.c  stack.c.in  stack.h  stack.h.in  std.c  std_array.c  std_buffer.c  std_buffer_bits.c  std_io.c  std_string.c  std_table.c  std_tuple.c  string_table.c  task_fiber.c  task_gccasm.c  task_gccasm_asm.S  task_gccasm_asm.c  utils.h  val_string.c  value.c  value.h  value_stack.c  value_stack.h  vm.c  (+1 more)
src/private/any/: asm.c  loader.c  scheduler.c  string_table.c  vm.c
src/private/stacks/: constant.c  constant_stack.c  constant_stack.h  import.c  import.h  import_stack.c  instruction.c  instruction.h  instruction_stack.c  s32.c  s32_stack.c  s32_stack.h  value.c  value.h  value_stack.c
src/tests/: conftest.py  opcode.py  test_dlist.c  test_dlist.py  test_gcov.c  test_gcov.py  test_stack.c  test_stack.py  test_utils.c  test_utils.py
src/utest/: CMakeLists.txt  actor.cpp  asm.cpp  db.cpp  dispatcher.cpp  fiber.cpp  gc.cpp  gc_string.cpp  list.cpp  loader.cpp  logical_op.cpp  main.cpp  math_op.cpp  msbox.cpp  prereq.cpp  prereq.h  process.cpp  scheduler.cpp  std_array.cpp  std_buffer.cpp  std_io.cpp  std_string.cpp  std_table.cpp  std_tuple.cpp  string_table.cpp  task.cpp  test_dlist.cpp  test_stack.cpp  test_utils.cpp  vm.cpp
src/utest/any/: asm.cpp  fiber.cpp  loader.cpp  string_table.cpp  vm.cpp
tools/amlc/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp
